# strict-buffa

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  Taskfile.yml
.changes/unreleased/: added-20260628-210901.yaml  added-20260705-120000.yaml  added-20260706-044847.yaml  added-20260706-172037.yaml  added-20260708-180602.yaml  changed-20260706-172037.yaml  fixed-20260628-210900.yaml  fixed-20260703-001140.yaml
.claude/: settings.json
.claude/agents/: rust-api-ergonomics-reviewer.md  rust-code-reviewer.md
.github/workflows/: ci.yml  cla.yaml
benchmarks/: Dockerfile.bench-buffa  Dockerfile.bench-google  Dockerfile.bench-prost  Dockerfile.bench-prost-bytes
benchmarks/buffa/: Cargo.toml  build.rs
benchmarks/buffa/benches/: analytics_event.rs  api_response.rs  common.rs  google_message1.rs  log_record.rs  media_frame.rs  packed_tile.rs  protobuf.rs
benchmarks/buffa/src/: lib.rs
benchmarks/charts/: generate.py  tables.md
benchmarks/datasets/: packed_tile.pb
benchmarks/history/: DESIGN.md  README.md  REPORT.md  annotations.md  generate.py
benchmarks/history/runs/: v0.1.0.json  v0.2.0.json  v0.3.0.json  v0.4.0.json  v0.5.0.json  v0.6.0.json  v0.7.0.json  v0.7.1.json
benchmarks/proto/iso/: analytics_event.proto  api_response.proto  google_message1.proto  log_record.proto  media_frame.proto  packed_tile.proto
buffa-build/: Cargo.toml
buffa-build/src/: lib.rs
buffa-codegen/: Cargo.toml
buffa-codegen/src/: context.rs  enumeration.rs  extension.rs  feature_gates.rs  impl_message.rs  impl_text.rs  lazy_view.rs  lib.rs  message.rs  oneof.rs  reflect.rs  view.rs
buffa-codegen/src/tests/: feature_gating.rs  generation.rs  mod.rs  size_arithmetic.rs
buffa-codegen/tests/: codegen_integration.rs  feature_gating_compile.rs
buffa-descriptor/src/: desc.rs  lib.rs  pool.rs
buffa-descriptor/src/reflect/: dynamic.rs  json.rs  message.rs
buffa-descriptor/tests/: dynamic_e2e.rs  extension_e2e.rs  pool_e2e.rs
buffa-descriptor/tests/protos/: reflect_test.fds  reflect_test_ext.proto
buffa-remote-derive/src/: bytes.rs  lib.rs  remote_field.rs
buffa-remote-derive/tests/: proto_bytes.rs
buffa-test/: Cargo.toml  build.rs
buffa-test/protos/: basic.proto  modcollide.proto  modcollide_oof.proto  modrace.proto  modrace_oof.proto  modrace_oof_us.proto  reflect_name_collision.proto  utf8_validation.proto
buffa-test/src/: lib.rs
buffa-test/src/tests/: arbitrary_bytes.rs  basic.rs  bytes_type.rs  closed_enum.rs  lazy_views.rs  mod.rs  mod_collision.rs  view.rs
buffa-test/tests/: reflectable.rs
buffa-types/: Cargo.toml
buffa-types/src/: any_ext.rs  duration_chrono.rs  lib.rs  timestamp_chrono.rs  timestamp_ext.rs
buffa-types/tests/: decode_unknown_field_limit.rs
buffa-yaml/: Cargo.toml
buffa-yaml/src/: decode.rs  encode.rs  error.rs  lib.rs
buffa/src/: encoding.rs  error.rs  extension.rs  extension_registry.rs  json_helpers.rs  lib.rs  map_codec.rs  message.rs  message_field.rs  message_set.rs  type_registry.rs  types.rs  unknown_fields.rs  view.rs
buffa/src/json_helpers/: tests.rs
buffa/src/text/: decoder.rs  token.rs
conformance/: Dockerfile  known_failures_reflect.txt
docs/: guide.md  migration-from-prost.md  migration-from-protobuf.md
docs/investigations/: reflection-prototype-2026-05.md  reflection-vtable.md
examples/bsr-quickstart/: Cargo.toml
examples/custom-types/: Cargo.toml  README.md  build.rs
examples/custom-types/proto/: record.proto
examples/custom-types/src/: main.rs
examples/custom-types/src/types/: flex_str.rs  index_map.rs  mod.rs  small_box.rs  small_bytes.rs  small_vec.rs
protoc-gen-buffa/: Cargo.toml
protoc-gen-buffa-packaging/: Cargo.toml
protoc-gen-buffa-packaging/src/: main.rs
protoc-gen-buffa/src/: main.rs
signatures/: cla.json
stress/googleapis/: Dockerfile  report.sh
