[package]
name = "buffa-test"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[features]
arbitrary = ["dep:arbitrary", "buffa/arbitrary"]

[dependencies]
arbitrary = { workspace = true, optional = true }
buffa = { workspace = true, features = ["std", "json", "text"] }
# `reflect`+`json` so the codegen-emitted `impl Reflectable` and the
# embedded descriptor pool resolve. `json` because `basic.proto` is also
# generated with `generate_text(true)` and the pool decodes the WKT
# descriptors that need it.
buffa-descriptor = { workspace = true, features = ["reflect", "json", "std"] }
buffa-types = { workspace = true, features = ["json"] }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]

[build-dependencies]
buffa-build = { workspace = true }
