[package]
name = "bench-buffa"
version = "0.1.0"
edition = "2021"
publish = false

# Disable lib benchmarks so `cargo bench -- --save-baseline X` only hits
# the criterion binary (not the libtest harness which rejects criterion args).
[lib]
bench = false

[dependencies]
buffa = { path = "../../buffa", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
buffa-build = { path = "../../buffa-build" }

[dev-dependencies]
criterion = "0.5"

[features]
default = []
api_response = []
log_record = []
analytics_event = []
google_message1 = []
media_frame = []
packed_tile = []

[[bench]]
name = "api_response"
harness = false
required-features = ["api_response"]

[[bench]]
name = "log_record"
harness = false
required-features = ["log_record"]

[[bench]]
name = "analytics_event"
harness = false
required-features = ["analytics_event"]

[[bench]]
name = "google_message1"
harness = false
required-features = ["google_message1"]

[[bench]]
name = "media_frame"
harness = false
required-features = ["media_frame"]

[[bench]]
name = "packed_tile"
harness = false
required-features = ["packed_tile"]
