[package]
name = "example-custom-types"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
buffa = { path = "../../buffa", features = ["std", "json"] }
# `generate_json(true)` emits `#[derive(serde::Serialize, ...)]`, which expands
# to `extern crate serde as _serde;` — so `serde` must be a *direct* dependency
# of this crate. buffa re-exports `bytes`/`alloc`/`serde_json` for generated
# code, but `serde` is the deliberate exception.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Backing storage for the crate-local newtypes. These are the "foreign"
# types an integrator would bring; the newtypes in src/types.rs wrap them
# to satisfy buffa's owned-type traits without an orphan-rule conflict.
flexstr = { version = "0.9", features = ["serde"] }
smallvec = { version = "1", features = ["serde", "const_generics"] }
smallbox = "0.8"
indexmap = { version = "2", features = ["serde"] }

[build-dependencies]
buffa-build = { path = "../../buffa-build" }
